--- a/settings.json
+++ b/settings.json
@@ -10,7 +10,7 @@
             "name": "티라노사우르스",
             "title": "티라노사우르스상",
             "explain": "다정다감하고 귀여운 당신은 모든 사람들에게 즐거움을 주는 호감형이다! 상냥하고 활발한 성격으로 어디에서도 인기폭발이지만, 애교와 웃음이 많아 연인에게 특히나 사랑스럽다. 당신은 애인바라기로 애인의 관심이 부족하면 시무룩해지고 외로움을 타는 모습이 마치 티라노와 똑 닮았다!",
-            "celeb": "",
+            "celeb": "티라노",
             "color": "rgba(27, 175, 234, 1)"
         },
         {
