--- a/settings.json
+++ b/settings.json
@@ -1,5 +1,5 @@
 {
-    "pageTitle": "나만의 동물상 테스트",
+    "pageTitle": "나만의 동물상ㅣ 테스트",
     "mainTitle": "난 무슨 동물상일까",
     "subtitle": "얼굴로 보는 인공지능 동물상 테스트",
     "footerText": "&copy; 호찬테크 2024. All Rights Reserved.",
