--- a/settings.json
+++ b/settings.json
@@ -25,7 +25,7 @@
             "title": "메뚜기상",
             "explain": "도도하고 섹시한 당신은 첫인상은 차가워 보이지만 묘한 매력을 풍겨 언제나 인기가 넘친다. 자존심이 세계 1등과 맞먹지만 관심 받는 것을 좋아하고 애인에게 관심이 받고 싶을 때는 애교도 부릴 줄 아는 귀여운 매력을 가졌다. 시크한 츤데레로 연인에게 끊임없이 설렘을 안겨주는 당신은 메뚜기와 닮았다!",
             "celeb": "메뚜기상 연예인: 안소희(원더걸스), 오연서, 한예슬, 이성경, 이효리",
-            "color": "rgba(265, 100, 50, 1)"
+            "color": "rgba(100, 200, 50, 1)"
         },
         {
             "name": "펭귄",
@@ -37,10 +37,9 @@
         {
             "name": "travis scott",
             "title": "travis scott상",
-            "explain": "도도하고 섹시한 당신은 첫인상은 차가워 보이지만 묘한 매력을 풍겨 언제나 인기가 넘친다. 자존심이 세계 1등과 맞먹지만 관심 받는 것을 좋아하고 애인에게 관심이 받고 싶을 때는 애교도 부릴 줄 아는 귀여운 매력을 가졌다. 시크한 츤데레로 연인에게 끊임없이 설렘을 안겨주는 당신은 travis scott와 닮았다!",
+            "explain": "도도하고 섹시한 당신은 첫인상은 차가워 보이지만 묘한 매력을 풍겨 언제나 인기가 넘친다. 자존심이 세계 1등과 맞먹지만 관심 받는 것을 좋아하고 애인에게 관심이 받고 싶을 때는 애교도 부릴 줄 아는 귀여운 매력을 가졌다. 시크한 츤데레로 연인에게 끊임없이 설렘을 안겨주는 당신은 travis scott과 닮았다!",
             "celeb": "travis scott상 연예인: travis scott",
-            "color": "rgba(265, 100, 50, 1)"
+            "color": "rgba(100, 200, 50, 1)"
         }
     ]
 }
-
